<resources>
    <string name="app_name">10stars</string>
    <string name="bModif">Modifier</string>
    <string name="bAjout">Ajouter</string>
    <string name="commentaire">Commentaire</string>
    <string name="num_chambre">Numéro Chambre</string>
    <string name="num_chambre_oblig">*Numéro Chambre</string>
    <string name="type_lit">Type Lit</string>
    <string name="etage_chambre">Etage Chambre</string>
    <string name="etage_chambre_oblig">*Etage Chambre</string>
    <string name="statut_chambre">Statut</string>
    <string name="max_personne">Max Personne</string>
    <string name="max_personne_oblig">*Max Personne</string>
    <string name="retours">Retour</string>
    <string name="client">Client</string>
    <string name="client_oblig">*Client</string>
    <string name="chambre">Chambre</string>
    <string name="suppr">Supprimer</string>
    <string name="maintenance">En Maintenance</string>
    <string name="nb_lit_simple_chambre">Nombre de Lit Simple</string>
    <string name="nb_lit_simple_chambre_oblig">*Nombre de Lit Simple</string>
    <string name="nb_lit_double_chambre">Nombre de Lit Double</string>
    <string name="nb_lit_double_chambre_oblig">*Nombre de Lit Double</string>
    <string name="nom">Nom</string>
    <string name="nom_oblig">*Nom</string>
    <string name="prenom">Prenom</string>
    <string name="prenom_oblig">*Prenom</string>
    <string name="email">Email</string>
    <string name="email_oblig">*Email</string>
    <string name="telephone">Telephone</string>
    <string name="recherche">Lancer la Recherche</string>
    <string name="bSelection">sélectionner</string>
    <string name="introuvable">Aucune Chambre trouvé</string>
    <string name="dateDebut">Date de début</string>
    <string name="dateDebut_oblig">*Date de début</string>
    <string name="dateFin">Date de fin</string>
    <string name="dateFin_oblig">*Date de fin</string>
    <string name="nbInvite">Nombre d\'invité</string>
    <string name="nbInvite_oblig">*Nombre d\'invité</string>
    <string name="recherche_chambre">Rechercher une chambre</string>
    <string name="nbAdulte">Nombre d\'adulte</string>
    <string name="nbAdulte_oblig">*Nombre d\'adulte</string>
    <string name="nbEnfant">Nombre d\'enfant</string>
    <string name="nbEnfant_oblig">*Nombre d\'enfant</string>
    <string name="reservation">Reservation</string>
    <string name="creerClient">Créer client</string>
    <string name="listeArrive">Arrive du jour</string>
    <string name="listeDepart">Départ du jour</string>
    <string name="maintenance2">Maintenance</string>
    <string name="creerChambre">Créer chambre</string>
    <string name="bDetail">Détail</string>
    <string name="bHistorique">Historique</string>
    <string name="obligatoire">* Champs obligatoire</string>
    <string name="client_liste">Liste des clients</string>
    <string name="chambre_liste">Liste des chambres</string>
    <string name="historique_liste">Liste des historiques</string>
    <string name="reservation_liste">Liste des réservations</string>
    <string name="maintenance_liste">Liste des maintenances</string>
    <string name="nom_menu">"Nom : "</string>
    <string name="prenom_menu">"Prénom : "</string>
    <string name="commentaire_menu">"Commentaire : "</string>
    <string name="email_menu">"Email : "</string>
    <string name="telephone_menu">"Téléphone : "</string>
    <string name="nb_lit_simple_chambre_menu">"Nombre de lit simple : "</string>
    <string name="nb_lit_double_chambre_menu">Nombre de lit double : </string>
    <string name="numChambre_menu">"Numéro chambre : "</string>
    <string name="statut_menu">"Statut : "</string>
    <string name="dateDebut_menu">"Date début : "</string>
    <string name="dateDepart_menu">"Date départ : "</string>
    <string name="nombreInvite_menu">"Nombre d'invité : "</string>
    <string name="nom_client_menu">"Id client : "</string>
    <string name="dateFin_menu">"Date de fin : "</string>
    <string name="numChambre_menu2">"Id chambre : "</string>
</resources>