<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Chambre.ChambreForm"
    android:orientation="vertical"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bRetours"
        android:text="@string/retours"
        android:backgroundTint="@color/primaire"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/obligatoireReserv"
        android:text="@string/obligatoire"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lmax_personne"
        android:text="@string/max_personne_oblig"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/max_personne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/max_personne"
        android:inputType="number"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lstatut_chambre"
        android:text="@string/statut_chambre"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statut_chambre_modification"
        android:hint="@string/statut_chambre"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/letage_chambre"
        android:text="@string/etage_chambre_oblig"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etage_chambre"
        android:hint="@string/etage_chambre"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nb_lit_simple2_chambre"
        android:text="@string/nb_lit_simple_chambre_oblig"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nb_lit_simple_chambre"
        android:hint="@string/nb_lit_simple_chambre"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nb_lit_double2_chambre"
        android:text="@string/nb_lit_double_chambre_oblig"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nb_lit_double_chambre"
        android:hint="@string/nb_lit_double_chambre"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnum_chambre"
        android:text="@string/num_chambre_oblig"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/num_chambre"
        android:hint="@string/num_chambre"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lcommentaire"
        android:text="@string/commentaire"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/commentaire_chambre"
        android:hint="@string/commentaire"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bModifAjout"
        android:backgroundTint="@color/primaire"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bSuppr"
        android:backgroundTint="@color/maintenance"
        android:text="@string/suppr"
        />


</LinearLayout>