<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    android:orientation="vertical"
    android:padding="2dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Chambre"
            android:text="@string/chambre"
            android:backgroundTint="@color/primaire"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Client"
            android:text="@string/client"
            android:backgroundTint="@color/primaire"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Reservation"
            android:text="@string/reservation"
            android:backgroundTint="@color/primaire"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Maintenance"
            android:text="@string/maintenance2"
            android:backgroundTint="@color/primaire"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/obligatoireReserv"
        android:text="@string/obligatoire"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filter_reserv_simple"
        android:hint="@string/nb_lit_simple_chambre"
        android:inputType="number"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filter_reserv_double"
        android:hint="@string/nb_lit_double_chambre"
        android:inputType="number"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dateDebut_oblig"
        android:id="@+id/dateDebutMain"
        android:clickable="true"
        android:padding="8dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_textview"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dateFin_oblig"
        android:id="@+id/dateFinMain"
        android:clickable="true"
        android:padding="8dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_textview"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/brecherche"
        android:text="@string/recherche"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listeArrive"
        android:id="@+id/listeArrive"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listeAriveeList"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listeDepart"
        android:id="@+id/listeDepart"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listeDepartList"
        />





</LinearLayout>