<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Reservation.ReservationForm"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bRetoursReservation"
        android:text="@string/retours"
        android:backgroundTint="@color/primaire"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/obligatoireReserv"
            android:text="@string/obligatoire"
            />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnumChambreReserv"
        android:text="@string/num_chambre"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tnumChambreReserv"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnbLitSimple_reserv"
        android:text="@string/nb_lit_simple_chambre"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tnbLitSimple_reserv"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnbLitDouble_reserv"
        android:text="@string/nb_lit_double_chambre"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tnbLitSDouble_reserv"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnbAdulte"
        android:text="@string/nbAdulte_oblig"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eNbNombreAdulte"
        android:text="0"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnbEnfant"
        android:text="@string/nbEnfant_oblig"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eNbNombreEnfant"
        android:text="0"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lMaxPersonneChambreReserv"
        android:text="@string/max_personne"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tnbMaxPersonneChambreReserv"
        android:padding="8dp"
        android:textStyle="bold"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ldateDebut"
        android:text="@string/dateDebut_oblig"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dateDebut"
            android:id="@+id/dateDebutReservForm"
            android:clickable="true"
            android:padding="8dp"
            android:textStyle="bold"
            android:background="@drawable/rounded_textview"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ldateFin"
            android:text="@string/dateFin_oblig"
            android:background="@color/primaire"
            android:padding="8dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dateFin"
            android:id="@+id/dateFinReservForm"
            android:clickable="true"
            android:padding="8dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_textview"
            />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnbInvite"
        android:text="@string/nbInvite_oblig"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nbInvite"
        android:text="0"
        android:hint="@string/nbInvite"
        android:inputType="number"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lclient_reservation"
            android:text="@string/client_oblig"
            android:background="@color/primaire"
            android:padding="8dp"
            android:textStyle="bold"
            />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/client_autocomplete_reserv"
            android:hint="@string/client"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creerClient"
            android:id="@+id/bCreaClientReserv"
            android:visibility="gone"
            android:backgroundTint="@color/primaire"
            />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lcommentaireReservation"
        android:text="@string/commentaire"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/commentaire_reservation"
        android:hint="@string/commentaire"
        />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bAjout"
            android:id="@+id/bAjoutReserv"
            android:backgroundTint="@color/primaire"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bSupprReserv"
            android:backgroundTint="@color/maintenance"
            android:text="@string/suppr"
            />


    </LinearLayout>

</ScrollView>