<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Historique.HistoriqueForm"
    android:orientation="vertical"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bRetoursHistoriqueForm"
        android:text="@string/retours"
        android:backgroundTint="@color/primaire"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ldateDebutHistorique"
        android:text="@string/dateDebut"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dateDebut"
        android:id="@+id/dateDebutHistoriqueForm"
        android:clickable="true"
        android:padding="8dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_textview"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ldateFinHistorique"
        android:text="@string/dateFin"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dateFin"
        android:id="@+id/dateFinHistoriqueForm"
        android:clickable="true"
        android:padding="8dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_textview"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnumChambreHistorique"
        android:text="@string/num_chambre"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chambre_historique"
        android:hint="@string/num_chambre"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnomClientHistorique"
        android:text="@string/client"
        android:background="@color/primaire"
        android:padding="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/client_historique"
        android:hint="@string/nom"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bSupprHistorique"
        android:backgroundTint="@color/maintenance"
        android:text="@string/suppr"
        />

</LinearLayout>